refactor: Update import paths for environment validators and utilities
feat: Optimize Google Maps hook with offline detection and performance logging

feat: Enhance marker visibility hook with performance metrics

refactor: Remove deprecated POI types file

feat: Implement CSV processor caching for static hosting environments

fix: Improve logging context management for structured logs

feat: Add environment variable utility for safer access

refactor: Update performance measurement utilities for better logging

feat: Introduce safe property access utility to prevent object injection issues

chore: Update TypeScript configuration for improved module resolution

chore: Adjust Vite configuration for environment variable handling

chore: Update Vitest configuration to reflect new import paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,8 +41,8 @@
     "src/**/*.tsx",
     "env.d.ts", // 環境変数型定義
     "react-extensions.d.ts",
-    "config/client-validator.ts",
-    "config/validators.ts",
+    "src/config/client-validator.ts",
+    "src/config/validators.ts",
     "config/simple-core.ts"
   ],
   "exclude": [
