feat: Enhance static hosting support and optimization
- Added environment variables for static hosting configuration in env-validator.ts.
- Implemented cache management for static hosting in useCacheManager.ts.
- Updated Google Maps integration to optimize for static hosting in useGoogleMaps.ts.
- Enhanced logging to account for static hosting scenarios in logger.ts.
- Improved marker icon handling for static hosting in markerUtils.ts.
- Created static hosting guidelines documentation.
- Developed scripts for static hosting setup and checks to ensure optimal deployment.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "// CI/CD連携": "----------------------------",
     "ci": "cross-env CI=true pnpm validate:env && pnpm typecheck && pnpm lint && pnpm test:config",
     "ci:build": "pnpm ci && cross-env NODE_ENV=production vite build",
-    "ci:deploy": "pnpm ci && pnpm build:ghpages && node scripts/verify-build.js"
+    "ci:deploy": "pnpm ci && pnpm build:ghpages && node scripts/verify-build.js",
+    "static-hosting": "node scripts/static-hosting-setup.mjs",
+    "verify:static": "node scripts/static-hosting-check.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
